updated apps description, simplified main page

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
-      <div class="container py-2 justify-content-sm-start justify-content-end">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container py-2 justify-content-lg-start justify-content-end">
         <button
           class="navbar-toggler"
           type="button"
@@ -101,20 +101,8 @@
               <span class="type-it"></span>
             </h1>
           </div>
-          <div data-aos="fade-right" class="col-12">
-            <h2>lorem ipsum dolor sit amet, consectetur adipiscing</h2>
-            <p class="text-muted">
-              lorem ipsum dolor sit amet, consectetur adipiscing, lorem ipsum
-              dolor sit amet, consectetur adipiscing, lorem ipsum dolor sit
-              amet, consectetur adipiscing,lorem ipsum dolor sit amet,
-              consectetur adipiscing, lorem ipsum dolor sit amet, consectetur
-              adipiscing, lorem ipsum dolor sit amet, consectetur adipiscing,
-              lorem ipsum dolor sit amet, consectetur adipiscing,lorem ipsum
-              dolor sit amet, consectetur adipiscing,
-            </p>
-          </div>
 
-          <div class="col-12 my-5">
+          <div class="col-12 mt-5">
             <!-- tablist -->
             <div class="row">
               <div class="col-sm-4 col-12 mb-sm-0 mb-3">
@@ -209,218 +197,120 @@
             <!-- tablist end -->
           </div>
         </div>
-      </div>
-    </section>
-    <!-- section two -->
-    <section>
-      <div class="container">
+        <!--projects start-->
         <div class="row justify-content-center">
-          <div class="col-12 my-5">
-            <!-- some carousel start -->
-
-            <div
-              id="carouselExampleIndicators"
-              class="carousel slide"
-              data-bs-ride="carousel"
-            >
-              <ol class="carousel-indicators">
-                <li
-                  data-bs-target="#carouselExampleIndicators"
-                  data-bs-slide-to="0"
-                  class="active"
-                ></li>
-                <li
-                  data-bs-target="#carouselExampleIndicators"
-                  data-bs-slide-to="1"
-                ></li>
-                <li
-                  data-bs-target="#carouselExampleIndicators"
-                  data-bs-slide-to="2"
-                ></li>
-              </ol>
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img
-                    src="modules/main-content/placeholder.jpg"
-                    class="d-block w-100"
-                    alt="..."
-                  />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    src="modules/main-content/placeholder.jpg"
-                    class="d-block w-100"
-                    alt="..."
-                  />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    src="modules/main-content/placeholder.jpg"
-                    class="d-block w-100"
-                    alt="..."
-                  />
-                </div>
-              </div>
-              <a
-                class="carousel-control-prev"
-                href="#carouselExampleIndicators"
-                role="button"
-                data-bs-slide="prev"
-              >
-                <span
-                  class="carousel-control-prev-icon"
-                  aria-hidden="true"
-                ></span>
-                <span class="visually-hidden">Previous</span>
-              </a>
-              <a
-                class="carousel-control-next"
-                href="#carouselExampleIndicators"
-                role="button"
-                data-bs-slide="next"
-              >
-                <span
-                  class="carousel-control-next-icon"
-                  aria-hidden="true"
-                ></span>
-                <span class="visually-hidden">Next</span>
-              </a>
-            </div>
-            <!-- some carousel end -->
-          </div>
-          <div class="col-12">
-            <!-- some quote start-->
-            <figure class="text-end border my-5 p-3">
-              <blockquote class="blockquote">
-                <p class="text-muted">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip
-                </p>
-              </blockquote>
-              <figcaption class="blockquote-footer">
-                Duis aute
-                <cite title="Source Title">Ex ea commodo consequat.</cite>
-              </figcaption>
-            </figure>
-            <!-- some quote end -->
-          </div>
-          <div class="col-12" data aos="fade-in">
-            <h2>lorem ipsum dolor sit amet, consectetur adipiscing</h2>
-            <p class="text-muted">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-              sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
-          </div>
           <div class="col-12 my-5">
             <div class="row">
               <!-- some cards start -->
-              <div class="col-lg-3 col-sm-6 mb-3">
+              <div class="col-lg-4 col-sm-6 mb-3">
                 <div class="card" data-aos="fade-up">
                   <div class="card-body">
                     <h5 class="card-title">Quiz</h5>
                     <h6 class="card-subtitle mb-2 text-muted">subtitle</h6>
                     <p class="card-text">
-                      Excepteur sint occaecat cupidatat non proident, sunt in
-                      culpa qui officia deserunt mollit anim id est laborum.
+                      Quiz app with customizable categories, difficulty and
+                      number of questions. Fetches data from external API.
                     </p>
-                    <a
-                      href="https://xanoosh.github.io/portfolio/quiz-api.html"
-                      class="btn btn-primary"
-                      >Link</a
-                    >
+                    <div class="btn-container">
+                      <a
+                        href="https://xanoosh.github.io/portfolio/quiz-api.html"
+                        class="btn btn-primary"
+                        >Link</a
+                      >
+                    </div>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-3 col-sm-6 mb-3">
-                <div class="card" data-aos="fade-up">
-                  <div class="card-body">
-                    <h5 class="card-title">Dice Game</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">subtitle</h6>
-                    <p class="card-text">
-                      Excepteur sint occaecat cupidatat non proident, sunt in
-                      culpa qui officia deserunt mollit anim id est laborum.
-                    </p>
-                    <a
-                      href="https://xanoosh.github.io/portfolio/dice.html"
-                      class="btn btn-primary"
-                      >Link</a
-                    >
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-lg-3 col-sm-6 mb-3">
+              <div class="col-lg-4 col-sm-6 mb-3">
                 <div class="card" data-aos="fade-up">
                   <div class="card-body">
                     <h5 class="card-title">"What's in my fridge" App</h5>
                     <h6 class="card-subtitle mb-2 text-muted">subtitle</h6>
                     <p class="card-text">
-                      Excepteur sint occaecat cupidatat non proident, sunt in
-                      culpa qui officia deserunt mollit anim id est laborum.
+                      This app allowes you to search for recipes by ingredients
+                      you have. Created with zero-waste approach in mind.
                     </p>
-                    <a
-                      href="https://xanoosh.github.io/portfolio/recipe-api.html"
-                      class="btn btn-primary"
-                      >Link</a
-                    >
+                    <div class="btn-container">
+                      <a
+                        href="https://xanoosh.github.io/portfolio/recipe-api.html"
+                        class="btn btn-primary"
+                        >Link</a
+                      >
+                    </div>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-3 col-sm-6 mb-3">
+              <div class="col-lg-4 col-sm-6 mb-3">
                 <div class="card" data-aos="fade-up">
                   <div class="card-body">
                     <h5 class="card-title">Texas Holdem Calculator</h5>
                     <h6 class="card-subtitle mb-2 text-muted">subtitle</h6>
                     <p class="card-text">
-                      Excepteur sint occaecat cupidatat non proident, sunt in
-                      culpa qui officia deserunt mollit anim id est laborum.
+                      Calculates the odds of winning for a player. Basically
+                      plays 10 000 poker games then dispays result.
                     </p>
-                    <a
-                      href="https://xanoosh.github.io/portfolio/poker-probability.html"
-                      class="btn btn-primary"
-                      >Link</a
-                    >
+                    <div class="btn-container">
+                      <a
+                        href="https://xanoosh.github.io/portfolio/poker-probability.html"
+                        class="btn btn-primary"
+                        >Link</a
+                      >
+                    </div>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-3 col-sm-6 mb-3">
+              <div class="col-lg-4 col-sm-6 mb-3">
                 <div class="card" data-aos="fade-up">
                   <div class="card-body">
                     <h5 class="card-title">Memory game</h5>
                     <h6 class="card-subtitle mb-2 text-muted">subtitle</h6>
                     <p class="card-text">
-                      Excepteur sint occaecat cupidatat non proident, sunt in
-                      culpa qui officia deserunt mollit anim id est laborum.
+                      Just a memory game with different colors.
                     </p>
-                    <a
-                      href="https://xanoosh.github.io/portfolio/memo.html"
-                      class="btn btn-primary"
-                      >Link</a
-                    >
+                    <div class="btn-container">
+                      <a
+                        href="https://xanoosh.github.io/portfolio/memo.html"
+                        class="btn btn-primary"
+                        >Link</a
+                      >
+                    </div>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-3 col-sm-6 mb-3">
+              <div class="col-lg-4 col-sm-6 mb-3">
+                <div class="card" data-aos="fade-up">
+                  <div class="card-body">
+                    <h5 class="card-title">Dice Game</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">subtitle</h6>
+                    <p class="card-text">
+                      Simple dice game designed for 2 players.
+                    </p>
+                    <div class="btn-container">
+                      <a
+                        href="https://xanoosh.github.io/portfolio/dice.html"
+                        class="btn btn-primary"
+                        >Link</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 col-sm-6 mb-3">
                 <div class="card" data-aos="fade-up">
                   <div class="card-body">
                     <h5 class="card-title">Map Generator</h5>
                     <h6 class="card-subtitle mb-2 text-muted">subtitle</h6>
                     <p class="card-text">
-                      Excepteur sint occaecat cupidatat non proident, sunt in
-                      culpa qui officia deserunt mollit anim id est laborum.
+                      Randomly creates map for a board game. Resources on the
+                      map have to be in specific range.
                     </p>
-                    <a
-                      href="https://xanoosh.github.io/portfolio/terraforming.html"
-                      class="btn btn-primary"
-                      >Link</a
-                    >
+                    <div class="btn-container">
+                      <a
+                        href="https://xanoosh.github.io/portfolio/terraforming.html"
+                        class="btn btn-primary"
+                        >Link</a
+                      >
+                    </div>
                   </div>
                 </div>
               </div>
@@ -437,8 +327,11 @@
             </p>
           </div>
         </div>
+        <!--projects end-->
       </div>
     </section>
+    <!-- section two -->
+
     <footer class="bg-light py-5 mt-5">
       <div class="container">
         <div class="row">
