added reset button to poker app

--- a/poker-probability.html
+++ b/poker-probability.html
@@ -20,7 +20,9 @@
   </head>
   <body>
     <div id="board">
-      <div id="card-list"></div>
+      <div id="card-list">
+        <div id="all-cards"></div>
+      </div>
       <div id="table">
         <div class="card-container"></div>
         <div class="card-container"></div>
@@ -38,7 +40,9 @@
         <p id="player-one-draw"></p>
       </div>
       <div class="btns">
-        <button id="remove">Remove</button> <button id="add">Add</button>
+        <button id="remove">Remove</button>
+        <button id="reset">Reset</button>
+        <button id="add">Add</button>
       </div>
       <div id="other-players">
         <div class="player-container">
