--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     href="#list-home"
                     role="tab"
                     aria-controls="home"
-                    >Home</a
+                    >Leaning towards JavaScript</a
                   >
                   <a
                     class="list-group-item list-group-item-action"
@@ -123,7 +123,7 @@
                     href="#list-profile"
                     role="tab"
                     aria-controls="profile"
-                    >Profile</a
+                    >Web Developer</a
                   >
                   <a
                     class="list-group-item list-group-item-action"
@@ -132,7 +132,7 @@
                     href="#list-messages"
                     role="tab"
                     aria-controls="messages"
-                    >Messages</a
+                    >Front-End Developer</a
                   >
                   <a
                     class="list-group-item list-group-item-action"
@@ -141,7 +141,7 @@
                     href="#list-settings"
                     role="tab"
                     aria-controls="settings"
-                    >Settings</a
+                    >Bootcamp</a
                   >
                 </div>
               </div>
