--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container py-2 justify-content-lg-start justify-content-end">
         <button
           class="navbar-toggler"
@@ -105,7 +105,7 @@
           <div class="col-12 mt-5">
             <!-- tablist -->
             <div class="row">
-              <div class="col-sm-4 col-12 mb-sm-0 mb-3">
+              <div class="col-md-4 col-12 mb-sm-0 mb-3">
                 <div class="list-group" id="list-tab" role="tablist">
                   <a
                     class="list-group-item list-group-item-action active"
