--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </h1>
           </div>
 
-          <div class="col-12 mt-5">
+          <div class="col-12">
             <!-- tablist -->
             <div class="row">
               <div class="col-md-4 col-12 mb-sm-0 mb-3">
