--- a/index.html
+++ b/index.html
@@ -317,14 +317,33 @@
               <!-- some cards end -->
             </div>
           </div>
-          <div class="col-12" data aos="fade-in">
-            <h2>lorem ipsum dolor sit amet, consectetur adipiscing</h2>
-            <p class="text-muted">
-              lorem ipsum dolor sit amet, consectetur adipiscing, lorem ipsum
-              dolor sit amet, consectetur adipiscing, lorem ipsum dolor sit
-              amet, consectetur adipiscing,lorem ipsum dolor sit amet,
-              consectetur adipiscing,
-            </p>
+          <div class="img-container col-md-3 col-sm-6 col-12 mb-3">
+            <img
+              class=""
+              src="modules/main-content/img/react-logo.png"
+              alt="react"
+            />
+          </div>
+          <div class="img-container col-md-3 col-sm-6 col-12 mb-3">
+            <img
+              class=""
+              src="modules/main-content/img/javascript-logo.png"
+              alt="react"
+            />
+          </div>
+          <div class="img-container col-md-3 col-sm-6 col-12 mb-3">
+            <img
+              class=""
+              src="modules/main-content/img/css3-logo.png"
+              alt="react"
+            />
+          </div>
+          <div class="img-container col-md-3 col-sm-6 col-12 mb-3">
+            <img
+              class=""
+              src="modules/main-content/img/html5-logo.png"
+              alt="react"
+            />
           </div>
         </div>
         <!--projects end-->
