tags and general styling

--- a/index.html
+++ b/index.html
@@ -206,7 +206,12 @@
                 <div class="card" data-aos="fade-up">
                   <div class="card-body">
                     <h5 class="card-title">Quiz</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">subtitle</h6>
+                    <div class="mb-3">
+                      <span class="tag">REST API</span>
+                      <span class="tag">ES6</span>
+                      <span class="tag">HTML</span>
+                      <span class="tag">CSS</span>
+                    </div>
                     <p class="card-text">
                       Quiz app with customizable categories, difficulty and
                       number of questions. Fetches data from external API.
@@ -225,7 +230,12 @@
                 <div class="card" data-aos="fade-up">
                   <div class="card-body">
                     <h5 class="card-title">"What's in my fridge" App</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">subtitle</h6>
+                    <div class="mb-3">
+                      <span class="tag">REST API</span>
+                      <span class="tag">ES6</span>
+                      <span class="tag">HTML</span>
+                      <span class="tag">CSS</span>
+                    </div>
                     <p class="card-text">
                       This app allowes you to search for recipes by ingredients
                       you have. Created with zero-waste approach in mind.
@@ -244,7 +254,11 @@
                 <div class="card" data-aos="fade-up">
                   <div class="card-body">
                     <h5 class="card-title">Texas Holdem Calculator</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">subtitle</h6>
+                    <div class="mb-3">
+                      <span class="tag">ES6</span>
+                      <span class="tag">HTML</span>
+                      <span class="tag">CSS</span>
+                    </div>
                     <p class="card-text">
                       Calculates the odds of winning for a player. Basically
                       plays 10 000 poker games then dispays result.
@@ -263,7 +277,11 @@
                 <div class="card" data-aos="fade-up">
                   <div class="card-body">
                     <h5 class="card-title">Memory game</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">subtitle</h6>
+                    <div class="mb-3">
+                      <span class="tag">ES6</span>
+                      <span class="tag">HTML</span>
+                      <span class="tag">CSS</span>
+                    </div>
                     <p class="card-text">
                       Just a memory game with different colors.
                     </p>
@@ -281,7 +299,11 @@
                 <div class="card" data-aos="fade-up">
                   <div class="card-body">
                     <h5 class="card-title">Dice Game</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">subtitle</h6>
+                    <div class="mb-3">
+                      <span class="tag">ES6</span>
+                      <span class="tag">HTML</span>
+                      <span class="tag">CSS</span>
+                    </div>
                     <p class="card-text">
                       Simple dice game designed for 2 players.
                     </p>
@@ -299,7 +321,11 @@
                 <div class="card" data-aos="fade-up">
                   <div class="card-body">
                     <h5 class="card-title">Map Generator</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">subtitle</h6>
+                    <div class="mb-3">
+                      <span class="tag">ES6</span>
+                      <span class="tag">HTML</span>
+                      <span class="tag">CSS</span>
+                    </div>
                     <p class="card-text">
                       Randomly creates map for a board game. Resources on the
                       map have to be in specific range.
