--- a/index.html
+++ b/index.html
@@ -343,28 +343,28 @@
               <!-- some cards end -->
             </div>
           </div>
-          <div class="img-container col-md-3 col-sm-6 col-12 mb-3">
+          <div class="img-container col-md-3 col-6 mb-md-3 mb-5">
             <img
               class=""
               src="modules/main-content/img/react-logo.png"
               alt="react"
             />
           </div>
-          <div class="img-container col-md-3 col-sm-6 col-12 mb-3">
+          <div class="img-container col-md-3 col-6 mb-md-3 mb-5">
             <img
               class=""
               src="modules/main-content/img/javascript-logo.png"
               alt="react"
             />
           </div>
-          <div class="img-container col-md-3 col-sm-6 col-12 mb-3">
+          <div class="img-container col-md-3 col-6 mb-md-3 mb-5">
             <img
               class=""
               src="modules/main-content/img/css3-logo.png"
               alt="react"
             />
           </div>
-          <div class="img-container col-md-3 col-sm-6 col-12 mb-3">
+          <div class="img-container col-md-3 col-6 mb-md-3 mb-5">
             <img
               class=""
               src="modules/main-content/img/html5-logo.png"
