created linked list witch append prepend and array generation

--- a/data-structures.html
+++ b/data-structures.html
@@ -15,12 +15,7 @@
   </head>
   <body>
     <div id="main">
-      <div class="data-structures">
-        <span id="numone">0</span>:<span id="numtwo">00</span>
-      </div>
-      <div class="buttons">
-        <button id="startstop">Start</button> <button id="Reset">Reset</button>
-      </div>
+      <p style="text-align: center">console</p>
     </div>
     <script>
       document.write(
