--- a/index.html
+++ b/index.html
@@ -50,21 +50,21 @@
               <a
                 class="nav-link"
                 href="https://xanoosh.github.io/portfolio/quiz-api.html"
-                >Quiz game</a
+                >Quiz</a
               >
             </li>
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="https://xanoosh.github.io/portfolio/dice.html"
-                >Dice game</a
+                href="https://xanoosh.github.io/portfolio/dice"
+                >Dice</a
               >
             </li>
             <li class="nav-item">
               <a
                 class="nav-link"
                 href="https://xanoosh.github.io/portfolio/memo.html"
-                >Memory game</a
+                >Memory</a
               >
             </li>
             <li class="nav-item">
