--- a/index.html
+++ b/index.html
@@ -49,13 +49,15 @@
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="https://xanoosh.github.io/portfolio/quiz-api.html"
+                target="_blank"
+                href="https://xanoosh.github.io/portfolio/quiz"
                 >Quiz</a
               >
             </li>
             <li class="nav-item">
               <a
                 class="nav-link"
+                target="_blank"
                 href="https://xanoosh.github.io/portfolio/dice"
                 >Dice</a
               >
@@ -63,7 +65,8 @@
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="https://xanoosh.github.io/portfolio/memo.html"
+                target="_blank"
+                href="https://xanoosh.github.io/portfolio/memo"
                 >Memory</a
               >
             </li>
@@ -218,7 +221,8 @@
                     </p>
                     <div class="btn-container">
                       <a
-                        href="https://xanoosh.github.io/portfolio/quiz-api.html"
+                        href="https://xanoosh.github.io/portfolio/quiz-api"
+                        target="_blank"
                         class="btn btn-primary"
                         >Link</a
                       >
@@ -276,7 +280,7 @@
               <div class="col-lg-4 col-sm-6 mb-3">
                 <div class="card" data-aos="fade-up">
                   <div class="card-body">
-                    <h5 class="card-title">Memory game</h5>
+                    <h5 class="card-title">Memo</h5>
                     <div class="mb-3">
                       <span class="tag">ES6</span>
                       <span class="tag">HTML</span>
@@ -287,7 +291,8 @@
                     </p>
                     <div class="btn-container">
                       <a
-                        href="https://xanoosh.github.io/portfolio/memo.html"
+                        target="_blank"
+                        href="https://xanoosh.github.io/portfolio/memo"
                         class="btn btn-primary"
                         >Link</a
                       >
@@ -309,7 +314,8 @@
                     </p>
                     <div class="btn-container">
                       <a
-                        href="https://xanoosh.github.io/portfolio/dice.html"
+                        target="_blank"
+                        href="https://xanoosh.github.io/portfolio/dice"
                         class="btn btn-primary"
                         >Link</a
                       >
