rearranging files- all relevant projects have their own directory

--- a/dice/index.html
+++ b/dice/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="../modules/dice-content/style.css" />
+    <link rel="stylesheet" href="dice-style.css" />
     <title>Game od dice</title>
   </head>
   <body>
@@ -55,6 +55,6 @@
       <button class="btn btn--hold">Hold</button>
       <button class="btn btn--how">How does it work?</button>
     </main>
-    <script src="../modules/dice-content/script.js"></script>
+    <script src="dice-script.js"></script>
   </body>
 </html>
