--- a/memo/index.html
+++ b/memo/index.html
@@ -7,7 +7,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300&display=swap');
     </style>
-    <link rel="stylesheet" href="../modules/memo-content/memo-style.css" />
+    <link rel="stylesheet" href="memo-style.css" />
     <title>Memo</title>
   </head>
   <body>
@@ -17,6 +17,6 @@
         <button onclick="window.location.reload();">New game</button>
       </div>
     </div>
-    <script src="../modules/memo-content/memo-script.js"></script>
+    <script src="memo-script.js"></script>
   </body>
 </html>
