--- a/quiz-api/index.html
+++ b/quiz-api/index.html
@@ -7,10 +7,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300&display=swap');
     </style>
-    <link
-      rel="stylesheet"
-      href="../modules/quiz-api-content/quiz-api-style.css"
-    />
+    <link rel="stylesheet" href="quiz-api-style.css" />
     <title>Quiz</title>
   </head>
   <body>
@@ -77,6 +74,6 @@
         <span id="questions-total">0/10</span>
       </h3>
     </div>
-    <script src="../modules/quiz-api-content/quiz-api-script.js"></script>
+    <script src="quiz-api-script.js"></script>
   </body>
 </html>
