--- a/recipe-api/index.html
+++ b/recipe-api/index.html
@@ -7,13 +7,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300&display=swap');
     </style>
-    <script>
-      document.write(
-        `<link rel="stylesheet" href="modules/recipe-api-content/recipe-api-style.css?v=${
-          Math.trunc(Math.random() * 10000) + 1
-        }" />`
-      );
-    </script>
+    <link rel="stylesheet" href="recipe-api-style.css" />
     <title>Recipe project</title>
   </head>
   <body>
@@ -171,12 +165,6 @@
         <button value="sidebar" class="scroll">Back</button>
       </div>
     </div>
-    <script>
-      document.write(
-        `<script src="modules/recipe-api-content/recipe-api-script.js?v="${
-          Math.trunc(Math.random() * 10000) + 1
-        }"><\/script>`
-      );
-    </script>
+    <script src="recipe-api-script.js"></script>
   </body>
 </html>
