restored links to files

--- a/index.html
+++ b/index.html
@@ -34,18 +34,26 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a
-                class="nav-link active"
-                aria-current="page"
-                href="https://xanoosh.github.io/portfolio/"
-                >Home</a
+                class="nav-link"
+                target="_blank"
+                href="https://xanoosh.github.io/portfolio/quiz-api"
+                >Quiz</a
               >
             </li>
             <li class="nav-item">
               <a
                 class="nav-link"
                 target="_blank"
-                href="https://xanoosh.github.io/portfolio/quiz-api"
-                >Quiz</a
+                href="https://xanoosh.github.io/portfolio/poker-probability"
+                >Texas Holdem Calculator</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                target="_blank"
+                href="https://xanoosh.github.io/portfolio/recipe-api"
+                >What's in my fridge app</a
               >
             </li>
             <li class="nav-item">
@@ -67,24 +75,9 @@
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="https://xanoosh.github.io/portfolio/terraforming.html"
+                target="_blank"
+                href="https://xanoosh.github.io/portfolio/terraforming"
                 >Map Generator</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                target="_blank"
-                href="https://xanoosh.github.io/portfolio/recipe-api"
-                >What's in my fridge app</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                target="_blank"
-                href="https://xanoosh.github.io/portfolio/poker-probability"
-                >Texas Holdem Calculator</a
               >
             </li>
           </ul>
@@ -336,7 +329,8 @@
                     </p>
                     <div class="btn-container">
                       <a
-                        href="https://xanoosh.github.io/portfolio/terraforming.html"
+                        target="_blank"
+                        href="https://xanoosh.github.io/portfolio/map-generator"
                         class="btn btn-primary"
                         >Link</a
                       >
@@ -348,32 +342,16 @@
             </div>
           </div>
           <div class="img-container col-md-3 col-6 mb-md-3 mb-5">
-            <img
-              class=""
-              src="modules/main-content/img/react-logo.png"
-              alt="react"
-            />
+            <img class="" src="main/img/react-logo.png" alt="react" />
           </div>
           <div class="img-container col-md-3 col-6 mb-md-3 mb-5">
-            <img
-              class=""
-              src="modules/main-content/img/javascript-logo.png"
-              alt="react"
-            />
+            <img class="" src="main/img/javascript-logo.png" alt="react" />
           </div>
           <div class="img-container col-md-3 col-6 mb-md-3 mb-5">
-            <img
-              class=""
-              src="modules/main-content/img/css3-logo.png"
-              alt="react"
-            />
+            <img class="" src="main/img/css3-logo.png" alt="react" />
           </div>
           <div class="img-container col-md-3 col-6 mb-md-3 mb-5">
-            <img
-              class=""
-              src="modules/main-content/img/html5-logo.png"
-              alt="react"
-            />
+            <img class="" src="main/img/html5-logo.png" alt="react" />
           </div>
         </div>
         <!--projects end-->
