--- a/snake/index.html
+++ b/snake/index.html
@@ -8,7 +8,7 @@
       @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300&display=swap');
     </style>
     <link rel="stylesheet" href="snake-style.css" />
-    <title>Memo</title>
+    <title>snake</title>
   </head>
   <body>
     <div id="board"></div>
